# ihaskell-notebook

./: GHC API-hacked but working.ipynb  GHC API.ipynb  JSON.ipynb  README.md  ghci2py.py  ghcimagic.py  iHaskell Examples.ipynb  ihaskellnb.sh
examples/: JSON.ipynb  Maximum slice product.ipynb  iHaskell Examples.ipynb
ghcj/: LICENSE  Printer.hs  ghcj.cabal
ghcj/appsrc/: Main.hs
ghcj/runtimesrc/: Printer.hs
ghcj/samples/: addTwice.64  error1.64  getTime.64  testInput.64
ghcj/src/: Evaluation.hs  GHCJ.hs  Types.hs
ghcj/tests/src/: JsonIO.hs  Main.hs
python/: ghci2py.py  ghcimagic.py  ghcj2py.py  ghcjmagic.py
