name:                ghcj
version:             0.0.0.1
synopsis:            JSON FIFO for evaling Haskell
description:         JSON interface to the GHC APIs
category:            Tools
license:             BSD3
License-file:        LICENSE
author:              Rogan Creswick, Benjamin Jones
maintainer:          creswick@galois.com
Cabal-Version:       >=1.8.0.6
build-type:          Simple

Flag tests
   Description:    Build the tests
   Default:        False

Library
   hs-source-dirs:   src

   Build-depends:    base       >= 4       && < 6

   ghc-options:      -Wall

Executable ghcj
   Main-Is:          Main.hs
   hs-source-dirs:   appsrc

   Build-depends:    ghcj,
                     base       >= 4       && < 6

   ghc-options:      -Wall

Executable test-ghcj
   Main-Is:          Main.hs
   hs-source-dirs:   tests/src

   if !flag(tests)
      Buildable:              False

   Build-depends:    ghcj,
                     base       >= 4       && < 6

   ghc-options:      -Wall
